# yandex_contest_invoker_compat_common

./: CMakeLists.txt
include/yandex/contest/invoker/compat/: ContainerContext.hpp  Error.hpp  ProcessContext.hpp  ProcessGroupContext.hpp
include/yandex/contest/invoker/compat/detail/: BasicContext.hpp  BasicContextChildren.hpp  BasicContextHandle.hpp  Handle.hpp
tests/: compat.cpp
